Add Aluminium Conductor Steel Reinforced product page with detailed features, applications, quality assurance, and after-sale services

--- a/aluminium-products.html
+++ b/aluminium-products.html
@@ -135,7 +135,7 @@
                 <p>All Aluminium Conductors are lightweight, highly conductive, and...</p>
             </a>
             <!-- Card 3 -->
-            <a  href="AAAC.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="all-aluminium-alloy-conductors.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/All aluminium alloy conductors.png" alt="image">
                 </div>
@@ -151,7 +151,7 @@
                 <p>AL 59 conductors are a type of high-conductivity, lightweight alloy...</p>
             </a>
             <!-- Card 5 -->
-            <a  href="ACSR.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="aluminium-conductor-steel-reinforced.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/Aluminium conductor steel reinforced.png" alt="image">
                 </div>
