--- a/cables.html
+++ b/cables.html
@@ -119,7 +119,7 @@
         <h2 data-aos="fade" data-aos-duration="1000">Explore our range of Cables delivering reliable transmission, insulation, and power efficiency.</h2>
         <div class="category-cards-row">
             <!-- Card 1 -->
-            <a  href="LT-PVC-insulated-power-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-pvc-insulated-power-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/LT PVC Power cables.png" alt="image">
                 </div>
@@ -127,7 +127,7 @@
                 <p>LT PVC Power cables are electrical cables designed for low-voltage...</p>
             </a>
             <!-- Card 2 -->
-            <a  href="LT-AB-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-ab-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/LT AB Cable.png" alt="image">
                 </div>
@@ -135,7 +135,7 @@
                 <p>LT Aerial Bunched (AB) Cables are versatile overhead power lines...</p>
             </a>
             <!-- Card 3 -->
-            <a  href="LT-XLPE-insulated-power-cable.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-xlpe-insulated-power-cable.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/XLPE Cable.png" alt="image">
                 </div>
