--- a/gi-wires.html
+++ b/gi-wires.html
@@ -135,7 +135,7 @@
                 <p>Stay wires, also known as Guy wires and HTGS wires are high-strength...</p>
             </a>
             <!-- Card 3 -->
-            <a  href="ACSR-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="acsr-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/ACSR Core Wire & Strand.png" alt="image">
                 </div>
