--- a/power-&-transmission.html
+++ b/power-&-transmission.html
@@ -136,7 +136,7 @@
                 <p>All Aluminium Conductors are lightweight, highly conductive...</p>
             </a>
             <!-- Card 3 -->
-            <a  href="AAAC.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="all-aluminium-alloy-conductors.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/All aluminium alloy conductors.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -152,7 +152,7 @@
                 <p>AL 59 conductors are a type of high-conductivity, lightweight alloy...</p>
             </a>
             <!-- Card 5 -->
-            <a  href="ACSR.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="aluminium-conductor-steel-reinforced.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/Aluminium conductor steel reinforced.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -160,7 +160,7 @@
                 <p>Aluminium Conductor Steel-Reinforced (ACSR) conductors are a...</p>
             </a>
             <!-- Card 6 -->
-            <a  href="LT-PVC-insulated-power-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-pvc-insulated-power-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/LT PVC Power cables.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -168,7 +168,7 @@
                 <p>LT PVC Power cables are electrical cables designed for low-voltage...</p>
             </a>
             <!-- Card 7 -->
-            <a  href="LT-AB-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-ab-cables.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/LT AB Cable.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -176,7 +176,7 @@
                 <p>LT Aerial Bunched (AB) Cables are versatile overhead power lines...</p>
             </a>
             <!-- Card 8 -->
-            <a  href="LT-XLPE-insulated-power-cable.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="lt-xlpe-insulated-power-cable.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/XLPE Cable.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -184,7 +184,7 @@
                 <p>LT XLPE Insulated Power Cables provide reliable and long-lasting...</p>
             </a>
             <!-- Card 9 -->
-            <a  href="ACSR-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="acsr-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/ACSR Core Wire & Strand.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
