--- a/rolled-products.html
+++ b/rolled-products.html
@@ -119,7 +119,7 @@
         <h2 data-aos="fade" data-aos-duration="1000">Explore our rolled steel products delivering strength, finish and durability.</h2>
         <div class="category-cards-row">
             <!-- Card 1 -->
-            <a  href="MS-rounds.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="ms-rounds.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/MS Rounds.png" alt="image">
                 </div>
@@ -127,7 +127,7 @@
                 <p>MS Rounds, or Mild Steel Rounds, are cylindrical rods made of mild...</p>
             </a>
             <!-- Card 2 -->
-            <a  href="MS-flats.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="ms-flats.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/MS Flats.png" alt="image">
                 </div>
