--- a/welding-electrodes.html
+++ b/welding-electrodes.html
@@ -119,7 +119,7 @@
         <h2 data-aos="fade" data-aos-duration="1000">Explore our Welding Electrodes for clean welds, minimal spatter, and consistent arc stability.</h2>
         <div class="category-cards-row">
             <!-- Card 1 -->
-            <a  href="Nirmal-6013.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="nirmal-6013.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/Nirmal 6013.png" alt="image">
                 </div>
