--- a/MS-rounds.html
+++ b/MS-rounds.html
@@ -7,7 +7,7 @@
     <title>MS Rounds - Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
-    <link rel="canonical" href="https://groupnirmal.com/MS-rounds.html">
+    <link rel="canonical" href="https://groupnirmal.com/ms-rounds.html">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
