--- a/all-aluminium-alloy-conductors.html
+++ b/all-aluminium-alloy-conductors.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aluminium Conductor Steel Reinforced - Nirmal</title>
+    <title>All Aluminium Alloy Conductors - Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
-    <link rel="canonical" href="https://groupnirmal.com/ACSR.html">
+    <link rel="canonical" href="https://groupnirmal.com/all-aluminium-alloy-conductors.html">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Link to Swipper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@latest/swiper-bundle.min.css" />
-    <!-- Link to intl-tel-input -->
+     <!-- Link to intl-tel-input -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@17.0.19/build/css/intlTelInput.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -110,10 +110,10 @@
 
     <!-- Banner Start -->
     <section class="banner">
-        <img src="assets/images/product-internal/Aluminium-Conductor-Steel-Reinforced-banner.jpg" alt="banner" loading="lazy" width="800" height="400">
+        <img src="assets/images/product-internal/All Aluminium Alloy Conductors-banner.jpg" alt="banner" loading="lazy" width="800" height="400">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">Aluminium Conductor Steel Reinforced</h1>
-            <p data-aos="fade" data-aos-duration="1200">Aluminium Conductor Steel-Reinforced (ACSR) conductors are a type of stranded conductors used in overhead power lines. They consist of a steel core for strength and layers of aluminium for conductivity. This design offers a balance of high tensile strength and low electrical resistance, making ACSR conductors a durable and efficient choice for power transmission.</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000">All Aluminium Alloy Conductors</h1>
+            <p data-aos="fade" data-aos-duration="1200">All Aluminium Alloy Conductors, or AAAC conductors are crafted from a specialised aluminium alloy. These conductors offer superior electrical conductivity, surpassing their ACSR counterparts on an equal diameter basis. They boast exceptional mechanical properties, including increased tensile strength, fatigue and corrosion resistance. Lightweight and durable, AAAC conductors are ideal for modern power transmission systems, ensuring reliable and efficient power delivery.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
                 <a href="assets/pdf/Nirmal_MainBrochure.pdf" target="_blank"><button>Download Brochure</button></a>
@@ -132,7 +132,7 @@
                     <img src="assets/images/product-internal/feature-card-1.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <h2>Material</h2>
-                <p>ACSR conductors are made using EC Grade aluminium and steel.</p>
+                <p>AAAC Conductors are made using aluminium alloy.</p>
             </div>
             <!-- Card 2 -->
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
@@ -140,7 +140,7 @@
                     <img src="assets/images/product-internal/feature-card-2.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <h2>Standards</h2>
-                <p>ACSR conductors conform to IS198 (II, V)</p>
+                <p>AAAC Conductors conform to IS198 (IV)</p>
             </div>
             <!-- Card 3 -->
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
@@ -148,7 +148,7 @@
                     <img src="assets/images/product-internal/feature-card-3.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <h2>Strand Configuration</h2>
-                <p>ACSR conductors are available in various strand configurations which include 7,19,37,61</p>
+                <p>AAAC Conductors are available in various strand configurations which include 7,19,37,61</p>
             </div>
             <!-- Card 4 -->
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
@@ -156,7 +156,7 @@
                     <img src="assets/images/product-internal/feature-card-5.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <h2>Packaging</h2>
-                <p>ACSR conductors are available in drums.</p>
+                <p>AAAC Conductors are packaged in drums.</p>
             </div>
         </div>
     </section> 
@@ -168,26 +168,26 @@
         <div class="apps-row">
             <!-- Card 1 -->
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
-                <img src="assets/images/application-images/Aluminium/ACSR/Overhead.jpg" alt="img" loading="lazy" width="100" height="150">
+                <img src="assets/images/application-images/Aluminium/AAAC/Overhead.jpg" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>ACSR Conductors</h4>
-                    <p>ACSR core wires provide reinforcement to ACSR conductors, which are extensively used in overhead power transmission and distribution lines. The steel core, due to its exceptional tensile strength, helps these conductors withstand significant mechanical loads, such as wind and ice, while the aluminium outer layers offer excellent electrical conductivity</p>
+                    <h4>Overhead Power Transmission</h4>
+                    <p>AAC conductors are used in overhead power lines that distribute electricity within cities and towns, supplying power to residential, commercial, and industrial area.</p>
                 </div>
             </div>
             <!-- Card 2 -->
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
-                <img src="assets/images/application-images/Aluminium/ACSR/Heavy duty.png" alt="img" loading="lazy" width="100" height="150"> 
+                <img src="assets/images/application-images/Aluminium/AAAC/urban.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Guy Grips</h4>
-                    <p>Guy grips are crucial components in anchoring utility poles and towers. ACSR core wires, due to their high tensile strength, are often utilised in making guy grips to provide reliable support and stability to these structures, especially in regions prone to extreme weather conditions.</p>
+                    <h4>Urban Power Grids</h4>
+                    <p>In densely populated urban areas, AAAC conductors can be used to upgrade existing power grids, increasing capacity and reliability while minimising disruptions.</p>
                 </div>
             </div>
             <!-- Card 3 -->
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
-                <img src="assets/images/application-images/Aluminium/ACSR/solar fencing.png" alt="img" loading="lazy" width="100" height="150">
+                <img src="assets/images/application-images/Aluminium/AAAC/Microgrid.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Solar Fencing</h4>
-                    <p>ACSR core wires, particularly those with a high tensile strength, are employed in solar fencing systems to create a robust and durable boundary. The steel core ensures the fence can withstand environmental factors like wind and rain, as well as potential physical damage.</p>
+                    <h4>Microgrids</h4>
+                    <p>AAAC conductors can be used to interconnect various power sources and loads within a localized electrical grid. Their lightweight and flexibility make them ideal for installation in diverse configurations, such as urban, suburban, and rural settings. This allows for greater flexibility and reliability in power distribution.</p>
                 </div>
             </div>
         </div>
