Update links in railways.html to point to the correct product pages for Aluminium Conductor Steel Reinforced and ACSR Core Wire & Strand

--- a/railways.html
+++ b/railways.html
@@ -152,7 +152,7 @@
                 <p>Galvanized Iron (GI) wires are drawn from steel wire rods durable and...</p>
             </a>
             <!-- Card 5 -->
-            <a  href="ACSR.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="aluminium-conductor-steel-reinforced.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/Aluminium conductor steel reinforced.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
@@ -168,7 +168,7 @@
                 <p>All Aluminium Conductors are lightweight, highly conductive, and...</p>
             </a>
             <!-- Card 7 -->
-            <a  href="ACSR-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="acsr-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/ACSR Core Wire & Strand.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
