Refactor headings in trading.html and trading.css for consistency and improved semantics

--- a/trading.html
+++ b/trading.html
@@ -123,12 +123,12 @@
 
     <!-- Products Start -->
     <section class="products">
-        <h1 data-aos="fade" data-aos-duration="1000">PRODUCTS</h1>
+        <h2 data-aos="fade" data-aos-duration="1000">PRODUCTS</h2>
         <div class="product-row">
             <div class="product-card" data-aos="fade" data-aos-duration="800" onclick="location.href='aluminium-ingots.html'">
                 <img src="assets/images/trading/product-1.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
-                    <h2>Aluminium Ingots</h2>
+                    <span>Aluminium Ingots</span>
                     <p>Aluminium ingots are the raw form of Aluminium that is cast into standard shapes for further processing...</p>
                     <button>Explore</button>
                 </div>
@@ -136,7 +136,7 @@
             <div class="product-card" data-aos="fade" data-aos-duration="900" onclick="location.href='aluminium-wire-ingots.html'">
                 <img src="assets/images/trading/product-2.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
-                    <h2>Aluminum Wire Rods</h2>
+                    <span>Aluminum Wire Rods</span>
                     <p>Aluminium wire rods are long, cylindrical metal rods primarily made from Aluminium...</p>
                     <button>Explore</button>
                 </div>
@@ -144,7 +144,7 @@
             <div class="product-card" data-aos="fade" data-aos-duration="1000" onclick="location.href='zinc-ingots.html'">
                 <img src="assets/images/trading/product-3.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
-                    <h2>Zinc Ingots</h2>
+                    <span>Zinc Ingots</span>
                     <p>Zinc ingots are solid blocks of refined zinc metal, produced through smelting and refining processes...</p>
                     <button>Explore</button>
                 </div>
@@ -155,34 +155,34 @@
 
     <!-- Why Choose Us Start -->
     <section class="why-choose-us">
-        <h1 data-aos="fade" data-aos-duration="1000">WHY CHOOSE US?</h1>
+        <h3 data-aos="fade" data-aos-duration="1000">WHY CHOOSE US?</h3>
         <div class="why-choose-us-row">
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/trading/network.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
-                <h2>Global Reach</h2>
+                <span>Global Reach</span>
                 <p>Extensive trading networks across</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/trading/partner.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
-                <h2>Reliable Partners</h2>
+                <span>Reliable Partners</span>
                 <p>Collaborating with trusted suppliers and clients worldwide.</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/trading/bid.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
-                <h2>Competitive Pricing</h2>
+                <span>Competitive Pricing</span>
                 <p>Delivering value without compromising on quality.</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/trading/truck.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
-                <h2>Efficient Logistics</h2>
+                <span>Efficient Logistics</span>
                 <p>Timely delivery backed by robust supply chain management.</p>
             </div>
         </div>
@@ -191,7 +191,7 @@
 
     <!-- Partner With Us Start -->
     <section class="partner">
-        <h1 data-aos="fade-down" data-aos-duration="1000">Partner With Us</h1>
+        <h4 data-aos="fade-down" data-aos-duration="1000">Partner With Us</h4>
         <p data-aos="fade" data-aos-duration="1000">Whether you’re looking to source premium products or establish long-term trading partnerships, we are here to meet your needs. Explore our offerings and let us help you achieve your business goals. Let’s reimagineer the future together!</p>
     </section> 
     <!-- Partner With Us End -->
