Refactor footer section across multiple HTML files to replace <h5> tags with <span> for consistency and improved semantics. Added loading attributes to images for better performance. Updated links for gallery sections and ensured proper formatting of list items.

--- a/contact.html
+++ b/contact.html
@@ -158,13 +158,13 @@
         <h2>Office & Showroom</h2>
         <div class="corp-card-row">
             <div class="corp-card">
-                <h3>Corporate Office</h3>
+                <span>Corporate Office</span>
                 <p>“Rudramani” 1720,Laskarhat EM Bypass, Kolkata – 700 039</p>
                 <p>Phone: 1800 309 3876</p>
                 <a href="https://maps.app.goo.gl/TTNpR6fGuCyFocMe8" target="_blank">View on map</a>
             </div>
             <div class="corp-card">
-                <h3>Nirmal Wires Retail Store</h3>
+                <span>Nirmal Wires Retail Store</span>
                 <p>62 A, Netaji Subhas Rd, Fairley Place, Barabazar Market, Kolkata, West Bengal 700001</p>
                 <p>Phone: 1800 309 3876</p>
                 <a href="https://maps.app.goo.gl/UupErqpYJuDu5HRN8" target="_blank">View on map</a>
@@ -175,40 +175,40 @@
 
     <!-- Manufacturing Units Start -->
     <section class="manufacturing-units" data-aos="fade" data-aos-duration="1000">
-        <h2>Manufacturing Units</h2>
+        <h3>Manufacturing Units</h3>
         <div class="manufacturing-card-row">
             <div class="manufacturing-card">
-                <h3>Nirmal Wires Pvt Ltd (Madhyamgram unit)</h3>
+                <span>Nirmal Wires Pvt Ltd (Madhyamgram unit)</span>
                 <p>Roy Bagan, Jessore Road, Madhyamgram, Kolkata – 700 129</p>
                 <a href="https://maps.app.goo.gl/CFBRwgdBLLn4A7H68" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Nirmal Wires Pvt Ltd (Deulti unit)</h3>
+                <span>Nirmal Wires Pvt Ltd (Deulti unit)</span>
                 <p>Village: Ishwaripur Deulti, P.O.: Barunda, P.S.: Bagnan, Howrah-711 303</p>
                 <a href="https://maps.app.goo.gl/9E4VuQUoipFnfWdz9" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Nirmal wires pvt Ltd ( Khordha unit)</h3>
+                <span>Nirmal wires pvt Ltd ( Khordha unit)</span>
                 <p>Plot No. 321, 325/1386, Malipada, Champajhar Khordha, Odisha- 752018</p>
                 <a href="https://maps.app.goo.gl/U5vVb1NuPG6aq5GYA" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Cee Dee Metalloys (P) Ltd.</h3>
+                <span>Cee Dee Metalloys (P) Ltd.</span>
                 <p>No.12,Veerasandra Industrial Area, Electronic City Post, Hosur Road, Bangalore -560100</p>
                 <a href="https://maps.app.goo.gl/3QRyofvKfmHf5hGK7" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Shri Ambika Metaliks Pvt Ltd</h3>
+                <span>Shri Ambika Metaliks Pvt Ltd</span>
                 <p>8/2, Nutanpara Road Liluah, Howrah – 711 204</p>
                 <a href="https://maps.app.goo.gl/LDaDkoB1a3rE5hScA" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Shieldarc Equipments Pvt Ltd</h3>
+                <span>Shieldarc Equipments Pvt Ltd</span>
                 <p>58/4 N.S. Road Liluah, Howrah – 711 204</p>
                 <a href="#">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h3>Central Stores Supplies (P) Ltd</h3>
+                <span>Central Stores Supplies (P) Ltd</span>
                 <p>391 (47 New), G.T. Road Belur Howrah: 711 201</p>
                 <a href="#">View on map</a>
             </div>
@@ -221,13 +221,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170" height="40">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170"
+                        height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
                             <div class="footer-imnner">
-                                <h5>COMPANY</h5>
+                                <span>COMPANY</span>
                                 <ul class="list-unstyled">
                                     <li><a href="our-story.html" class="text-decoration-none">Our Story</a></li>
                                     <li><a href="products.html" class="text-decoration-none">Products</a></li>
@@ -237,8 +238,8 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
-                            <div class="footer-imnner" style="margin-bottom: 2.1rem;">
-                                <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
+                            <div class="footer-imnner" style="margin-bottom: 2.1rem;" id="blank-head">
+                                
                             </div>
                             <div>
                                 <ul class="list-unstyled">
@@ -251,7 +252,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6 mt-4 mt-md-0">
                             <div class="footer-imnner" style="width: 10rem; position: relative; right: 2rem;">
-                                <h5>CONTACT US</h5>
+                                <span>CONTACT US</span>
                                 <ul class="list-unstyled">
                                     <li><a href="contact.html" class="text-decoration-none">Corporate Office</a></li>
                                     <li><a href="contact.html" class="text-decoration-none">Manufacturing Units</a></li>
@@ -263,39 +264,43 @@
                     </div>
                 </div>
                 <div class="col-xl-3 d-none d-xl-block text-end">
-                    <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
+                    <span class="mb-3">Toll Free No. 1800 309 3876</span>
                     <div class="social text-end position-relative d-none d-md-block mb-4">
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" width="40" height="40"/>
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg=="
-                                    target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" width="40" height="40"/>
+                                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/"
-                                    target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" width="40" height="40"/>
+                                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube"  loading="lazy" width="40" height="40"/>
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter"  loading="lazy" width="40" height="40"/>
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy" width="75" height="75">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy"
+                        width="75" height="75">
                 </div>
             </div>
         </div>
