--- a/niznal-coated-wire.html
+++ b/niznal-coated-wire.html
@@ -545,7 +545,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
                             <div class="footer-imnner">
-                                <h5>COMPANY</h5>
+                                <span>COMPANY</span>
                                 <ul class="list-unstyled">
                                     <li><a href="our-story.html" class="text-decoration-none">Our Story</a></li>
                                     <li><a href="products.html" class="text-decoration-none">Products</a></li>
@@ -555,14 +555,13 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
-                            <div class="footer-imnner" style="margin-bottom: 2.1rem;">
-                                <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
+                            <div class="footer-imnner" style="margin-bottom: 2.1rem;" id="blank-head">
+                                
                             </div>
                             <div>
                                 <ul class="list-unstyled">
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
-                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a>
-                                    </li>
+                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
                                     <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
@@ -570,7 +569,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6 mt-4 mt-md-0">
                             <div class="footer-imnner" style="width: 10rem; position: relative; right: 2rem;">
-                                <h5>CONTACT US</h5>
+                                <span>CONTACT US</span>
                                 <ul class="list-unstyled">
                                     <li><a href="contact.html" class="text-decoration-none">Corporate Office</a></li>
                                     <li><a href="contact.html" class="text-decoration-none">Manufacturing Units</a></li>
@@ -582,7 +581,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 d-none d-xl-block text-end">
-                    <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
+                    <span class="mb-3">Toll Free No. 1800 309 3876</span>
                     <div class="social text-end position-relative d-none d-md-block mb-4">
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
