--- a/welding-electrodes.html
+++ b/welding-electrodes.html
@@ -229,13 +229,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170"
+                        height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
                             <div class="footer-imnner">
-                                <h5>COMPANY</h5>
+                                <span>COMPANY</span>
                                 <ul class="list-unstyled">
                                     <li><a href="our-story.html" class="text-decoration-none">Our Story</a></li>
                                     <li><a href="products.html" class="text-decoration-none">Products</a></li>
@@ -245,9 +246,9 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
-                                <div class="footer-imnner" style="margin-bottom: 2.1rem;">
-                                    <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
-                                </div>
+                            <div class="footer-imnner" style="margin-bottom: 2.1rem;" id="blank-head">
+                                
+                            </div>
                             <div>
                                 <ul class="list-unstyled">
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
@@ -259,7 +260,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6 mt-4 mt-md-0">
                             <div class="footer-imnner" style="width: 10rem; position: relative; right: 2rem;">
-                                <h5>CONTACT US</h5>
+                                <span>CONTACT US</span>
                                 <ul class="list-unstyled">
                                     <li><a href="contact.html" class="text-decoration-none">Corporate Office</a></li>
                                     <li><a href="contact.html" class="text-decoration-none">Manufacturing Units</a></li>
@@ -270,38 +271,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 d-none d-xl-block text-end" >
-                    <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
+                <div class="col-xl-3 d-none d-xl-block text-end">
+                    <span class="mb-3">Toll Free No. 1800 309 3876</span>
                     <div class="social text-end position-relative d-none d-md-block mb-4">
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" />
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" />
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" />
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" />
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" />
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy"
+                        width="75" height="75">
                 </div>
             </div>
         </div>
